--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="news_button">News</string>
     <string name="fav_button">Favorite</string>
     <string name="rec_button">Recent</string>
+    <string name="preference_file_key">com.example.nemus.newspaper2.PREFERENCE_FILE_KEY</string>
+    <string name="preference_time">PREFERENCE_TIME</string>
 </resources>
